RESOLVED FIXED 207633
[LFC][IFC] Display::Run should not have any geometry mutation functions.
https://bugs.webkit.org/show_bug.cgi?id=207633
Summary [LFC][IFC] Display::Run should not have any geometry mutation functions.
alan
Reported 2020-02-12 07:44:47 PST
All the geometry information is readily available at construction time.
Attachments
Patch (4.36 KB, patch)
2020-02-12 07:53 PST, alan
no flags
Archive of layout-test-results from webkit-cq-03 for mac-mojave (3.13 MB, application/zip)
2020-02-12 10:30 PST, WebKit Commit Bot
no flags
Radar WebKit Bug Importer
Comment 1 2020-02-12 07:45:16 PST
alan
Comment 2 2020-02-12 07:53:30 PST
WebKit Commit Bot
Comment 3 2020-02-12 09:38:46 PST
The commit-queue encountered the following flaky tests while processing attachment 390522 [details]: editing/spelling/spellcheck-attribute.html bug 206178 (authors: g.czajkowski@samsung.com, mark.lam@apple.com, and rniwa@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2020-02-12 09:39:12 PST
The commit-queue encountered the following flaky tests while processing attachment 390522 [details]: editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5 2020-02-12 10:30:10 PST
Comment on attachment 390522 [details] Patch Rejecting attachment 390522 [details] from commit-queue. New failing tests: editing/spelling/spellcheck-async-remove-frame.html Full output: https://webkit-queues.webkit.org/results/13321450
WebKit Commit Bot
Comment 6 2020-02-12 10:30:13 PST
Created attachment 390534 [details] Archive of layout-test-results from webkit-cq-03 for mac-mojave The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-03 Port: mac-mojave Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 7 2020-02-12 11:07:30 PST
Comment on attachment 390522 [details] Patch Clearing flags on attachment: 390522 Committed r256458: <https://trac.webkit.org/changeset/256458>
WebKit Commit Bot
Comment 8 2020-02-12 11:07:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.