[LFC][IFC] Display::Run should not have any geometry mutation functions. https://bugs.webkit.org/show_bug.cgi?id=207633 <rdar://problem/59386235>

Reviewed by Antti Koivisto.

Now that Display::Runs are constructed after merging the runs on the line, we don't need any of
these mutation functions.

* layout/displaytree/DisplayRun.h:
(WebCore::Display::Run::textContent const):
(WebCore::Display::Run::isLineBreak const):
(WebCore::Display::Run::lineIndex const):
(WebCore::Display::Run::setWidth): Deleted.
(WebCore::Display::Run::setTop): Deleted.
(WebCore::Display::Run::setlLeft): Deleted.
(WebCore::Display::Run::moveVertically): Deleted.
(WebCore::Display::Run::moveHorizontally): Deleted.
(WebCore::Display::Run::expandVertically): Deleted.
(WebCore::Display::Run::expandHorizontally): Deleted.
(WebCore::Display::Run::setTextContent): Deleted.
(WebCore::Display::Run::setExpansion): Deleted.
(WebCore::Display::Run::setImage): Deleted.


Canonical link: https://commits.webkit.org/220616@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256458 268f45cc-cd09-0410-ab3c-d52691b4dbfc